--- a/config/params.yaml
+++ b/config/params.yaml
@@ -1,9 +1,9 @@
 %YAML:1.0
 
 common:
-    core_num: 3
+    core_num: 10
     init_frame: 10
-    nearby_frame: 6
+    nearby_frame: 3
 
     # Transformation from body-frame (imu) to camera
     Tbl: !!opencv-matrix
@@ -16,19 +16,19 @@ common:
               0.0, 0.0, 0.0, 1.0]
 
 lidar:  
-    frequency: 30 
+    frequency: 30   #no used
     min_distance: 0.2           
     max_distance: 8.0                               
     horizontal_angle: 70.0
     odom_n_rpy: 1.0e-2        
     odom_n_xyz: 1.0e-2
-    local_map_resolution: 0.05
-    local_map_size: 10.0
+    local_map_resolution: 0.5
+    local_map_size: 50.0
     edge_n: 1.0e-2
     surf_n: 1.0e-2
 
     # mapping thread
-    map_resolution: 0.01
+    map_resolution: 0.5
     map_cell_width: 20.0
     map_cell_height: 20.0
     map_cell_depth: 20.0
